src/main/fabric8/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ${project.artifactId}
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ${project.artifactId}
      tier: backend
      version: ${project.version}
  template:
    metadata:
      labels:
        app: ${project.artifactId}
        tier: backend
        version: ${project.version}
    spec:
      containers:
      - name: ${project.artifactId}
        image: ${docker.image.prefix}/${project.artifactId}:${docker.image.tag}
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
