src/main/fabric8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${project.artifactId}
spec:
  selector:
    app: ${project.artifactId}
    version: ${project.version}
  ports:
  - name: http
    port: 8080
    targetPort: 8080
